src/index.css
@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap");

* {
  color: white;
  font-family: Open-Sans, sans-serif;
}

body {
  margin: 0;
  padding: 0;
}

button {
  background-color: transparent;
  border-radius: 0.375rem; /* 6px */
  border: solid 2px rgba(255 255 255 / 50%);
  margin: 0.625rem; /* 10px */
  padding: 0.625rem; /* 10px */
}

input {
  background-color: rgba(255 255 255 / 5%);
  border-radius: 0.375rem; /* 6px */
  border: none;
  font-size: 1.25rem; /* 20px */
  line-height: 1.75rem; /* 28px */
  padding: 0.75rem 1rem;
  width: 100%;
  box-shadow: rgba(0 0 0 / 5%) 0 54px 55px, rgba(0 0 0 / 5%) 0 -12px 30px,
    rgba(0 0 0 / 5%) 0 4px 6px, rgba(0 0 0 / 5%) 0 12px 3px,
    rgba(0 0 0 / 5%) 0 -3px 5px;
}

input:focus {
  outline: none;
}

nav {
  border-top: solid 2px rgba(255 255 255 / 50%);
  margin: 0.625rem; /* 10px */
  padding: 0.625rem; /* 10px */
}

.app {
  background-color: #3f3f46;
  display: flex;
}

.bottom-section {
  align-items: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 100%;
}

.history li {
  cursor: pointer;
  list-style-type: none;
  padding: 1rem /* 16px */ 0;
}

.history {
  height: 100%;
  margin: 0.625rem; /* 10px */
  padding: 0.625rem; /* 10px */
}

.info {
  color: rgba(255 255 255 / 50%);
  font-size: 0.75rem; /* 12px */
  line-height: 1rem; /* 16px */
  padding: 0.625rem; /* 10px */
}

.input-container {
  max-width: 42rem; /* 672px */
  position: relative;
  width: 100%;
}

.main {
  align-items: center;
  display: flex;
  flex-direction: column;
  height: 100vh;
  justify-content: space-between;
  text-align: center;
  width: 100%;
}

.side-bar {
  background-color: #202123;
  display: flex;
  flex-direction: column;
  height: 100vh;
  justify-content: space-between;
  width: 15rem; /* 240px */
}

#submit {
  bottom: 1rem; /* 16px */
  cursor: pointer;
  position: absolute;
  right: 0;
}

